public/assets/scss/_mixins.scss
@mixin mix-page-base {
  color: var(--color-content-text);
  background-color: var(--color-content-background-color);
  min-height: var(--content-height);
  letter-spacing: 0.05em;
  line-height: 1.5em;
  max-height: 78vh;
}

@mixin mix-page-content {
  padding: 0.01em 1em;
  @include mix-page-base;
}

@mixin mix-left-side-menu {
  display: grid;
  grid-template-areas:
    "left-menu-panel main-content-panel";
  grid-template-columns: var(--left-side-panel-menu-width) auto;
  @include mix-page-base;
}

@mixin mix-left-and-right-side-menu {
  display: grid;
  grid-template-areas:
    "left-menu-panel sub-main-content-panel right-menu-panel";
  grid-template-columns: var(--left-side-panel-menu-width) auto var(--right-side-panel-menu-width);
  @include mix-page-base;
}

@mixin mix-box-shadow {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
}

